--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,12 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** Orange **/
+  --ion-color-orange: #FF5200;
+  --ion-color-orange-rgb: 255, 215, 0;
+  --ion-color-orange-contrast: #fff;
+  --ion-color-orange-contrast-rgb: 0, 0, 0;
+  --ion-color-orange-shade: #e0bd00;
+  --ion-color-orange-tint: #ffdb1a;
 }
