--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,11 +19,7 @@
   <div class="forgot-password-box">
     <ion-label>Passwort vergessen?</ion-label>
   </div>
-
-
-
-
-
+  <!-- Commit Test -->
 
 
 </ion-content>
