Submission Page Design edited

--- a/src/app/home-screen/home-screen.page.html
+++ b/src/app/home-screen/home-screen.page.html
@@ -62,7 +62,7 @@
 
   <div class="container-content-all-projects">
     <div class="button-all-projects">
-      <p>ALLE PROJEKTE</p>
+      <p (click)="openSubmissionPage()">ALLE PROJEKTE</p>
     </div>
   </div>
 
