submission-details page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
         <div class="container-footer">
             <ion-select></ion-select>
             <button (click)="logout()" >LOGOUT</button>
-            <a>Imprint</a>
+            <a (click)="openSubmissionDetailsPage()">Imprint</a>
 
         </div>
 
