--- a/src/app/home-screen/home-screen.page.scss
+++ b/src/app/home-screen/home-screen.page.scss
@@ -73,6 +73,10 @@ ion-slide{
 
 }
 
+.container-video .back-icon-container ion-img{
+
+}
+
 .container-slider-projectname{
   width: 95%;
   margin: 1% 2.5%;
