Choose Project Page works with the Testserver.
On Login the name of the current user will be displayed.
The available companies are stored in a Ion-Picker

The value on choosing a company is still static and has to be changed!

--- a/src/app/choose-project/choose-project.page.scss
+++ b/src/app/choose-project/choose-project.page.scss
@@ -21,13 +21,14 @@ ion-content{
 
 .container-select-customer{
   margin: 15% 11%;
+  padding: 5px;
   border: 1px solid #FF5200;
   box-sizing: border-box;
   border-radius: 10px;
   text-align: center;
 }
 
-.container-select-customer ion-select{
+.container-select-customer ion-label{
   color: #FF5200;
 
 }
