Fixed Slider-Details-Button Click Bug

--- a/src/app/home-screen/home-screen.page.html
+++ b/src/app/home-screen/home-screen.page.html
@@ -18,7 +18,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-slides pager="true" [options]="slideOption" scrollbar="false">
+  <ion-slides pager="false" [options]="slideOption" scrollbar="false">
     <ion-slide [style.background-image]="backgroundImageSliderOne" >
         <div class="container-slider-header">
           <ion-img [src]="getIcon()" (click)="isIconSelected_OnClick()"></ion-img>
