--- a/src/app/home-screen/home-screen.page.scss
+++ b/src/app/home-screen/home-screen.page.scss
@@ -101,6 +101,7 @@ ion-slide{
   width: 95%;
   height: 15%;
   margin-top: 1%;
+  z-index: 1;
 }
 
 .icon-add{
@@ -118,6 +119,7 @@ ion-slide{
   float: right;
   height: 100%;
   width: 10%;
+  z-index: 0;
   margin-right: 4%;
 }
 
